--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,15 @@
             "showLog": true
         },
         {
+            "name": "Debug HTTP Server with GORM",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/http-server-gorm",
+            "console": "integratedTerminal",
+            "showLog": true
+        },
+        {
             "name": "Debug Read-Line Program",
             "type": "go",
             "request": "launch",
