--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,6 +29,15 @@
             "showLog": true
         },
         {
+            "name": "Debug TCP Chat Server",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}/cmd/tcp-chat-server",
+            "console": "integratedTerminal",
+            "showLog": true
+        },
+        {
             "name": "Debug Current File",
             "type": "go",
             "request": "launch",
